--- a/yousports_frontend/src/index.css
+++ b/yousports_frontend/src/index.css
@@ -5,9 +5,15 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: black;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.datebutton {
+  margin-inline: 10px;
+  display: inline-block;
 }
